--- a/public/admin/templates/topnav.html
+++ b/public/admin/templates/topnav.html
@@ -1,4 +1,4 @@
-<a class="navbar-brand" href="/admin/">Avara Solutions</a>
+<a class="navbar-brand" href="/admin/">CMS One</a>
 <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#">
   <i class="fas fa-bars"></i>
 </button>
