--- a/public/admin/templates/sidenav.html
+++ b/public/admin/templates/sidenav.html
@@ -20,3 +20,12 @@
   <div class="sb-nav-link-icon"><i class="fas fa-scroll"></i></div>
   Logs
 </a>
+<div class="sb-sidenav-menu-heading">CMS</div>
+<a class="nav-link" href="/admin/content">
+  <div class="sb-nav-link-icon"><i class="fas fa-edit"></i></div>
+  Content
+</a>
+<a class="nav-link" href="/admin/menusnpages">
+  <div class="sb-nav-link-icon"><i class="fas fa-file-alt"></i></div>
+  Menus, Footers and Pages
+</a>
