--- a/public/admin/templates/itemlist.html
+++ b/public/admin/templates/itemlist.html
@@ -7,19 +7,19 @@
   <p class="mb-1 item-type"><strong>Type:</strong> {{{itemtype}}}</p>
   <div class="mb-1 extra-items"></div>
   <p class="mb-1">
-    <button class="btn btn-primary main-items-select-btn" data-itemid="{{{itemid}}}">
+    <button class="btn btn-primary main-items-select-btn" data-itemid="{{{itemid}}}" data-mappingid="{{{mappingid}}}">
       <i class="fas fa-check"></i> Select
     </button>
-    <button class="btn btn-primary main-items-edit-btn" data-itemid="{{{itemid}}}">
+    <button class="btn btn-primary main-items-edit-btn" data-itemid="{{{itemid}}}" data-mappingid="{{{mappingid}}}">
       <i class="fas fa-edit"></i> Edit Basic
     </button>
-    <button class="btn btn-primary main-items-adv-edit-btn" data-itemid="{{{itemid}}}">
+    <button class="btn btn-primary main-items-adv-edit-btn" data-itemid="{{{itemid}}}" data-mappingid="{{{mappingid}}}">
       <i class="fas fa-edit"></i> Edit Advance
     </button>
-    <button class="btn btn-primary main-items-preview-btn" data-itemid="{{{itemid}}}">
+    <button class="btn btn-primary main-items-preview-btn" data-itemid="{{{itemid}}}" data-mappingid="{{{mappingid}}}">
       <i class="fas fa-eye"></i> Preview
     </button>
-    <button class="btn btn-danger main-items-remove-btn" data-itemid="{{{itemid}}}">
+    <button class="btn btn-danger main-items-remove-btn" data-itemid="{{{itemid}}}" data-mappingid="{{{mappingid}}}">
       <i class="fas fa-trash"></i> Delete
     </button>
   </p>
